src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

.glass{
  /* background: rgba( 255, 255, 255, 1 ); */
box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.40 );
backdrop-filter: blur( 10px );
-webkit-backdrop-filter: blur( 10px );
border-radius: 10px;
border: 1px solid rgba( 255, 255, 255, 0.18 );
}

.glass-blue{
  background-color: #4158D0;
background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
}

.glass-teal{
  background-color: #0093E9;
background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
}

.glass-violet{
  background-image: linear-gradient( 179.7deg,  rgba(249,21,215,1) 1.1%, rgba(22,0,98,1) 99% );
}

.glass-lblue{
  background-image: linear-gradient(to top, #30cfd0 0%, #330867 100%);
}

.pattern-box{
  background-color: rgba(255, 255, 255, 0);
  opacity: 0.2;
  background-image: radial-gradient(circle at center center, #4158D0, rgba(255, 255, 255, 0)), repeating-radial-gradient(circle at center center, #4158D0, #4158D0, 30px, transparent 70px, transparent 31px);
  background-blend-mode: multiply;
}

@font-face {
  font-family: "Poppins-Black";
  src: url("/src/assets/fonts/Poppins-Black.ttf") format("truetype"); 
}
@font-face {
  font-family: "Poppins-Bold";
  src: url("/src/assets/fonts/Poppins-Bold.ttf") format("truetype"); 
}
@font-face {
  font-family: "Poppins-ExtraBold";
  src: url("/src/assets/fonts/Poppins-ExtraBold.ttf") format("truetype"); 
}
@font-face {
  font-family: "Poppins-ExtraLight";
  src: url("/src/assets/fonts/Poppins-ExtraLight.ttf") format("truetype"); 
}
@font-face {
  font-family: "Poppins-Light";
  src: url("/src/assets/fonts/Poppins-Light.ttf") format("truetype"); 
}
@font-face {
  font-family: "Poppins-Medium";
  src: url("/src/assets/fonts/Poppins-Medium.ttf") format("truetype"); 
}
@font-face {
  font-family: "Poppins-Regular";
  src: url("/src/assets/fonts/Poppins-Regular.ttf") format("truetype"); 
}
@font-face {
  font-family: "Poppins-SemiBold";
  src: url("/src/assets/fonts/Poppins-SemiBold.ttf") format("truetype"); 
}
@font-face {
  font-family: "Poppins-Thin";
  src: url("/src/assets/fonts/Poppins-Thin.ttf") format("truetype"); 
}
@font-face {
  font-family: "Merienda-Black";
  src: url("/src/assets/fonts/Merienda-Black.ttf") format("truetype"); 
}
@font-face {
  font-family: "Merienda-Bold";
  src: url("/src/assets/fonts/Merienda-Bold.ttf") format("truetype"); 
}
@font-face {
  font-family: "Merienda-ExtraBold";
  src: url("/src/assets/fonts/Merienda-ExtraBold.ttf") format("truetype"); 
}
@font-face {
  font-family: "Merienda-ExtraLight";
  src: url("/src/assets/fonts/Merienda-ExtraLight.ttf") format("truetype"); 
}
@font-face {
  font-family: "Merienda-Light";
  src: url("/src/assets/fonts/Merienda-Light.ttf") format("truetype"); 
}
@font-face {
  font-family: "Merienda-Medium";
  src: url("/src/assets/fonts/Merienda-Medium.ttf") format("truetype"); 
}
@font-face {
  font-family: "Merienda-Regular";
  src: url("/src/assets/fonts/Merienda-Regular.ttf") format("truetype"); 
}
@font-face {
  font-family: "Merienda-SemiBold";
  src: url("/src/assets/fonts/Merienda-SemiBold.ttf") format("truetype"); 
}
@font-face {
  font-family: "Merienda-Thin";
  src: url("/src/assets/fonts/Merienda-Thin.ttf") format("truetype"); 
}

@layer base {
  :root {
    --background: 0 0% 100%;
    --foreground: 20 14.3% 4.1%;
    --card: 0 0% 100%;
    --card-foreground: 20 14.3% 4.1%;
    --popover: 0 0% 100%;
    --popover-foreground: 20 14.3% 4.1%;
    --primary: 24 9.8% 10%;
    --primary-foreground: 60 9.1% 97.8%;
    --secondary: 60 4.8% 95.9%;
    --secondary-foreground: 24 9.8% 10%;
    --muted: 60 4.8% 95.9%;
    --muted-foreground: 25 5.3% 44.7%;
    --accent: 60 4.8% 95.9%;
    --accent-foreground: 24 9.8% 10%;
    --destructive: 0 84.2% 60.2%;
    --destructive-foreground: 60 9.1% 97.8%;
    --border: 20 5.9% 90%;
    --input: 20 5.9% 90%;
    --ring: 20 14.3% 4.1%;
    --chart-1: 12 76% 61%;
    --chart-2: 173 58% 39%;
    --chart-3: 197 37% 24%;
    --chart-4: 43 74% 66%;
    --chart-5: 27 87% 67%;
    --radius: 0.5rem
  }
  .dark {
    --background: 20 14.3% 4.1%;
    --foreground: 60 9.1% 97.8%;
    --card: 20 14.3% 4.1%;
    --card-foreground: 60 9.1% 97.8%;
    --popover: 20 14.3% 4.1%;
    --popover-foreground: 60 9.1% 97.8%;
    --primary: 60 9.1% 97.8%;
    --primary-foreground: 24 9.8% 10%;
    --secondary: 12 6.5% 15.1%;
    --secondary-foreground: 60 9.1% 97.8%;
    --muted: 12 6.5% 15.1%;
    --muted-foreground: 24 5.4% 63.9%;
    --accent: 12 6.5% 15.1%;
    --accent-foreground: 60 9.1% 97.8%;
    --destructive: 0 62.8% 30.6%;
    --destructive-foreground: 60 9.1% 97.8%;
    --border: 12 6.5% 15.1%;
    --input: 12 6.5% 15.1%;
    --ring: 24 5.7% 82.9%;
    --chart-1: 220 70% 50%;
    --chart-2: 160 60% 45%;
    --chart-3: 30 80% 55%;
    --chart-4: 280 65% 60%;
    --chart-5: 340 75% 55%
  }
}
@layer base {
  * {
    @apply border-border;
  }
  body {
    @apply bg-background text-foreground;
  }
}

